--- a/war/index.html
+++ b/war/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 <div id="container">
-    <h1>★ gwt-teh Demo ★</h1>
+    <h1>★ GWT-TEH Demo ★</h1>
 
 	<div>
 		TEH stands for <b>T</b>oString <b>E</b>quals <b>H</b>ashCode<br/><br/>
@@ -17,7 +17,7 @@
 			<li>any attribute used for hashCode will be used for equals and toString</li>
 			<li>any attribute used for equals will be used for toString</li>
 		</ul>
-		gwt-TEH uses the same annotations, and Generator-reflection to make it available in both client and server sides.
+		GWT-TEH uses the same annotations, and Code generation to make it available in both client and server sides.
 	</div>
 
 	<h2>Client ➡ Server</h2>
@@ -69,9 +69,11 @@
     </table>
 
     <br/>
-    <a href="https://github.com/wokier/TEH">TEH on github</a><br/>
-    <a href="https://github.com/wokier/gwt-teh">gwt-teh on github</a>
-    
+    <br/>
+    <div class="right">
+    	<a href="https://github.com/wokier/TEH">TEH on github</a><br/>
+   		<a href="https://github.com/wokier/gwt-teh">gwt-teh on github</a>
+    </div>
     <div id="error" class="error"></div>
     </div>
     <noscript>
